Added working globus playbook & conf template

--- a/globus_playbook.yml
+++ b/globus_playbook.yml
@@ -17,21 +17,18 @@
 
    - name: test
      shell: echo {{ ansible_hostname }}  > test1.tmp
-
+   
  - hosts: headnode
    gather_facts: yes
    tasks:
-
-   - name: test
-     shell: echo {{ ansible_hostname }}#{{ globus_username }} > test2.tmp
-   - name: test2 {{ ansible_hostname }}#{{ globus_username }}
-     shell: echo {{ ansible_hostname }}#{{ globus_username }}
 
    - expect:
        command: globus-connect-server-setup
        responses:
          (?i)Globus Username: "{{ globus_username }}"
          (?i)Globus Password: "{{ globus_passwd }}"
+   
+   - template: src=/root/Ansible_stuff/conf_files/globus-connect-server.conf dest=/etc/globus-connect-server.conf
 
    vars_prompt:
     - name: globus_username
@@ -40,4 +37,9 @@
     - name: globus_passwd
       prompt: "Enter your Globus Online Password:"
       private: yes
+
+   vars:
+     globus_endpoint_name: "{{ ansible_hostname }}#{{ globus_username }}" 
+
+
 
