--- a/rocks_update_playbook.yml
+++ b/rocks_update_playbook.yml
@@ -12,7 +12,7 @@
            chdir: /export/rocks/install/
 
      - name: rocks reinstall all nodes
-       command: rocks set host boot % action=install
+       command: rocks set host boot compute action=install
  
      - name: rocks reboot compute nodes
-       command : rocks run host % '/sbin/reboot'
+       command : rocks run host compute '/sbin/reboot'
